--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             map.addSource('ukraine-tiles', {
                 'type': 'raster',
                 'tiles': [
-                    'assets/ukraine/{z}/{x}/{y}.png'
+                    'tiles/ukraine/{z}/{x}/{y}.png'
                 ],
                 'tileSize': 256,
                 'attribution': 'Map tiles designed by Eric Fan</a>'
@@ -111,7 +111,7 @@
             map.addSource('seattle3-tiles', {
                 'type': 'raster',
                 'tiles': [
-                    'assets/seattle3/{z}/{x}/{y}.png'
+                    'tiles/seattle3/{z}/{x}/{y}.png'
                 ],
                 'tileSize': 256,
                 'attribution': 'Map tiles designed by Eric Fan</a>'
@@ -120,7 +120,7 @@
             map.addSource('seattle2-tiles', {
                 'type': 'raster',
                 'tiles': [
-                    'assets/seattle2/{z}/{x}/{y}.png'
+                    'tiles/seattle2/{z}/{x}/{y}.png'
                 ],
                 'tileSize': 256,
                 'attribution': 'Map tiles designed by Eric Fan</a>'
@@ -129,7 +129,7 @@
             map.addSource('seattle1-tiles', {
                 'type': 'raster',
                 'tiles': [
-                    'assets/seattle1/{z}/{x}/{y}.png'
+                    'tiles/seattle1/{z}/{x}/{y}.png'
                 ],
                 'tileSize': 256,
                 'attribution': 'Map tiles designed by Eric Fan'
